# pepecam

./: .env  .env.secrets  .env.template  .gitattributes  .gitignore  README.md  TODO  compose.yaml  db.bash  dev.bash  docker-compose.yml  link_pepes.bash  random_pictures.bash  run.bash  test_api.bash
api/: .secrets  Cargo.toml  Dockerfile  Dockerfile.release  Rocket.toml  dev.bash
api/src/: auth.rs  cache.rs  config.rs  cors.rs  error.rs  mail.rs  main.rs  password.rs  payload.rs  pictures.rs  query.rs  regex.rs  result.rs  routes.rs  session.rs  uuid.rs  validation.rs
api/src/routes/: picture.rs  pictures.rs  user.rs
api/src/routes/picture/: comment.rs  comments.rs  like.rs
api/src/routes/pictures/: comment.rs  like.rs  superposable.rs  user.rs
api/src/routes/user/: confirm.rs  email.rs  login.rs  logout.rs  register.rs  reset.rs
db/: Dockerfile  create_tables.sql  populate.sh  populate.sql
front/: Dockerfile  httpd.conf  index.html
front/icons/: README.md
front/src/: app.js  confirm.html  confirm.js  cookies.js  editor.html  editor.js  email.html  index.html  pepe-footer.js  pepe-gallery.js  pepe-header.js  pepe-post.js  pepe-thumbnail.js  pepe-upload.js  profile.html  profile.js  reset.html  reset.js  style.css  upload.html  upload.js  utils.js
front/src/style/: editor.css  gallery.css  global.css  pepe-footer.css  pepe-gallery.css  pepe-header.css  pepe-icons.css  pepe-post.css  pepe-upload.css  upload.css
scripts/: db.bash  dev.bash  link_pepes.bash  random_pictures.bash
