[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
regex = "1.5.6"
uuid = { version = "1.1.2", features = ["v4"] }
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
sqlx = { version = "0.5", default-features = false, features = ["uuid", "macros", "time"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_postgres"] }
rust-argon2 = "1.0"
photon-rs = "0.3.1"
strum = { version = "0.24", features = ["derive"] }
lazy_static = "1.4.0"
lettre = "0.10.0"
